--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "ts-node src/poker.ts"
     },
     "dependencies": {
+        "@types/jasmine": "^3.3.12",
         "@types/node": "^12.0.0",
         "readline": "^1.3.0",
         "readline-sync": "^1.4.9",
