--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
     "main": "poker.ts",
     "version": "1.0.0",
     "scripts": {
-        "test": "jasmine",
+        "test": "jasmine-ts --config=jasmine.json",
         "start": "ts-node src/poker.ts"
     },
     "dependencies": {
         "@types/jasmine": "^3.3.12",
         "@types/node": "^12.0.0",
         "readline": "^1.3.0",
-        "readline-sync": "^1.4.9",
-        "ts-node": "8.1.0"
+        "readline-sync": "^1.4.9"
     },
     "devDependencies": {
-        "jasmine": "^3.4.0"
+        "jasmine": "^3.4.0",
+        "jasmine-ts": "^0.3.0",
+        "jasmine-ts-console-reporter": "^3.1.1",
+        "ts-node": "^8.1.0",
+        "typescript": "^3.4.5"
     }
 }
