--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "start": "ts-node src/poker.ts"
     },
     "dependencies": {
+        "typescript": "^3.4.5",
+        "ts-node": "^8.1.0",
         "@types/jasmine": "^3.3.12",
         "@types/node": "^12.0.0",
         "readline": "^1.3.0",
@@ -14,8 +16,6 @@
     "devDependencies": {
         "jasmine": "^3.4.0",
         "jasmine-ts": "^0.3.0",
-        "jasmine-ts-console-reporter": "^3.1.1",
-        "ts-node": "^8.1.0",
-        "typescript": "^3.4.5"
+        "jasmine-ts-console-reporter": "^3.1.1"
     }
 }
