--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
     "main": "poker.ts",
     "version": "1.0.0",
     "scripts": {
-        "test": "jasmine-ts --config=jasmine.json",
+        "test": "nyc  -r lcov -e .ts -x \"*.spec.ts\" jasmine-ts --config=jasmine.json",
         "start": "ts-node src/poker.ts"
     },
     "dependencies": {
         "typescript": "^3.4.5",
-        "ts-node": "^8.1.0",
         "@types/jasmine": "^3.3.12",
         "@types/node": "^12.0.0",
         "readline": "^1.3.0",
         "readline-sync": "^1.4.9"
     },
     "devDependencies": {
+        "@istanbuljs/nyc-config-typescript": "^0.1.3",
         "jasmine": "^3.4.0",
-        "jasmine-ts": "^0.3.0"
+        "jasmine-ts": "^0.3.0",
+        "nyc": "^14.1.1",
+        "source-map-support": "^0.5.12",
+        "ts-node": "^8.1.0"
     }
 }
